@@ -1,1 +1,2 @@
 CONFIG_X86_32=y
+#CONFIG_X86_SPINLOCK_TICKET is not set
